--- a/client-android/app/src/main/res/values/styles.xml
+++ b/client-android/app/src/main/res/values/styles.xml
@@ -1,7 +1,6 @@
 <resources>
 
-    <style name="Widget.Theme.ÇaFaitLaJobRemote.MyView" parent="">
-        <item name="android:background">@color/gray_400</item>
-        <item name="exampleColor">@color/light_blue_400</item>
+    <style name="Widget.Theme.ÇaFaitLaJobRemote.MainActivity" parent="">
+        <item name="android:background">@color/white</item>
     </style>
 </resources>
